vitrail-pg-macros/tests/ui/fail/invalid_relation.stderr
error: unknown local field `missing_field` referenced by relation field `user`
  --> tests/ui/fail/invalid_relation.rs:13:41
   |
13 |         user    user @relation(fields: [missing_field], references: [id])
   |                                         ^^^^^^^^^^^^^
